--- a/web_ban_cong/src/main/resources/templates/back-end/products.html
+++ b/web_ban_cong/src/main/resources/templates/back-end/products.html
@@ -200,7 +200,7 @@
                 <div id="sidebarEffect"></div>
                 <div>
                     <div class="logo-wrapper logo-wrapper-center">
-                        <a href="index.html" data-bs-original-title="" title="">
+                        <a th:href="@{/manager/}" data-bs-original-title="" title="">
                             <img class="img-fluid for-white" th:src="@{/back-end-images/logo/full-white.png}" alt="logo">
                         </a>
                         <div class="back-btn">
@@ -211,10 +211,10 @@
                         </div>
                     </div>
                     <div class="logo-icon-wrapper">
-                        <a href="index.html">
-                            <img class="img-fluid main-logo main-white" th:src="@{/back-end-images/logo/1-white.png}" alt="logo">
+                        <a th:href="@{/manager/}">
+                            <img class="img-fluid main-logo main-white" th:src="@{/back-end-images/logo/logo.png}" alt="logo">
                             <img class="img-fluid main-logo main-dark" th:src="@{/back-end-images/logo/logo-white.png}"
-                                alt="logo">
+                                 alt="logo">
                         </a>
                     </div>
                     <nav class="sidebar-main">
@@ -227,7 +227,7 @@
                                 <li class="back-btn"></li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title link-nav" href="index.html">
+                                    <a class="sidebar-link sidebar-title link-nav" th:href="@{/manager/}">
                                         <i class="ri-home-line"></i>
                                         <span>Dashboard</span>
                                     </a>
@@ -240,11 +240,43 @@
                                     </a>
                                     <ul class="sidebar-submenu">
                                         <li>
-                                            <a href="products.html">Prodcts</a>
+                                            <a th:href="@{/manager/all}">Danh sách sản phẩm</a>
                                         </li>
 
                                         <li>
-                                            <a href="add-new-product.html">Add New Products</a>
+                                            <a th:href="@{/product/add}">Thêm sản phẩm</a>
+                                        </li>
+                                    </ul>
+                                </li>
+
+                                <li class="sidebar-list">
+                                    <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
+                                        <i class="ri-store-3-line"></i>
+                                        <span>Combo</span>
+                                    </a>
+                                    <ul class="sidebar-submenu">
+                                        <li>
+                                            <a th:href="@{/combo/manager/all}">Combo</a>
+                                        </li>
+
+                                        <li>
+                                            <a th:href="@{/combo/add}">Add New Combo</a>
+                                        </li>
+                                    </ul>
+                                </li>
+
+                                <li class="sidebar-list">
+                                    <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
+                                        <i class="ri-store-3-line"></i>
+                                        <span>Category</span>
+                                    </a>
+                                    <ul class="sidebar-submenu">
+                                        <li>
+                                            <a th:href="@{/category/tree/add}">Thêm loại cây mới</a>
+                                        </li>
+
+                                        <li>
+                                            <a th:href="@{/category/tree/add}">Thêm loại sản phẩm mới</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -252,31 +284,15 @@
                                 <li class="sidebar-list">
                                     <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
                                         <i class="ri-list-check-2"></i>
-                                        <span>Category</span>
+                                        <span>Tree</span>
                                     </a>
                                     <ul class="sidebar-submenu">
                                         <li>
-                                            <a href="category.html">Category List</a>
+                                            <a th:href="@{/manager/tree/all}">Danh sách cây</a>
                                         </li>
 
                                         <li>
-                                            <a href="add-new-tree.html">Add New Category</a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li class="sidebar-list">
-                                    <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
-                                        <i class="ri-list-settings-line"></i>
-                                        <span>Attributes</span>
-                                    </a>
-                                    <ul class="sidebar-submenu">
-                                        <li>
-                                            <a href="attributes.html">Attributes</a>
-                                        </li>
-
-                                        <li>
-                                            <a href="add-new-attributes.html">Add Attributes</a>
+                                            <a th:href="@{/tree/add}">Thêm cây mới</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -332,22 +348,6 @@
                                         </li>
                                         <li>
                                             <a href="order-tracking.html">Order Tracking</a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li class="sidebar-list">
-                                    <a class="linear-icon-link sidebar-link sidebar-title" href="javascript:void(0)">
-                                        <i class="ri-focus-3-line"></i>
-                                        <span>Localization</span>
-                                    </a>
-                                    <ul class="sidebar-submenu">
-                                        <li>
-                                            <a href="translation.html">Translation</a>
-                                        </li>
-
-                                        <li>
-                                            <a href="currency-rates.html">Currency Rates</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -477,7 +477,7 @@
 
                                                         <td th:text="${product.getName()}"></td>
 
-                                                        <td th:text="${product.getCategory()}"></td>
+                                                        <td th:text="${product.getCategory().categoryName}"></td>
 
                                                         <td th:text="${product.getColor()}"></td>
 
