--- a/web_ban_cong/src/main/resources/templates/back-end/add-new-category-tree.html
+++ b/web_ban_cong/src/main/resources/templates/back-end/add-new-category-tree.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+    <!-- meta data -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +13,9 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" th:href="@{/back-end-images/favicon.png}" type="image/x-icon">
     <link rel="shortcut icon" th:href="@{/back-end-images/favicon.png}" type="image/x-icon">
-    <title>Fastkart - Dashboard</title>
+    <title>Fastkart - Add New Product</title>
 
-    <!-- Google font-->
+    <!-- Google font -->
     <link
             href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet">
@@ -22,33 +23,35 @@
     <!-- Linear Icon css -->
     <link rel="stylesheet" th:href="@{/back-end-css/linearicon.css}">
 
-    <!-- fontawesome css -->
+    <!-- Fontawesome css -->
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/font-awesome.css}">
 
-    <!-- Themify icon css-->
+    <!-- Themify icon css -->
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/themify.css}">
 
-    <!-- ratio css -->
-    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/ratio.css}">
-
-    <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/remixicon.css}">
+    <!--Dropzon css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/dropzone.css}">
 
     <!-- Feather icon css-->
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/feather-icon.css}">
 
+    <!-- remixicon css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/remixicon.css}">
+
+    <!-- Select2 css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/select2.min.css}">
+
     <!-- Plugins css -->
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/scrollbar.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/animate.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/chartist.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/date-picker.css}">
 
-    <!-- Bootstrap css-->
+    <!-- Bootstrap css -->
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/bootstrap.css}">
 
-    <!-- vector map css -->
-    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vector-map.css}">
-
-    <!-- Slick Slider Css -->
-    <link rel="stylesheet" th:href="@{/back-end-css/vendors/slick.css}">
+    <!-- Bootstrap-tag input css -->
+    <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/vendors/bootstrap-tagsinput.css}">
 
     <!-- App css -->
     <link rel="stylesheet" type="text/css" th:href="@{/back-end-css/style.css}">
@@ -61,7 +64,7 @@
 </div>
 <!-- tap on tap end -->
 
-<!-- page-wrapper Start-->
+<!-- page-wrapper start -->
 <div class="page-wrapper compact-wrapper" id="pageWrapper">
     <!-- Page Header Start-->
     <div class="page-header">
@@ -196,7 +199,7 @@
     </div>
     <!-- Page Header Ends-->
 
-    <!-- Page Body Start-->
+    <!-- Page Body start -->
     <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
         <div class="sidebar-wrapper">
@@ -428,114 +431,44 @@
         </div>
         <!-- Page Sidebar Ends-->
 
-        <!-- Container-fluid starts-->
         <div class="page-body">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="card card-table">
-                            <div class="card-body">
-                                <div class="title-header option-title d-sm-flex d-block">
-                                    <h5>Products List</h5>
-                                    <div class="right-options">
-                                        <ul>
-                                            <li>
-                                                <a href="javascript:void(0)">import</a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:void(0)">Export</a>
-                                            </li>
-                                            <li>
-                                                <a class="btn btn-solid" th:href="@{/tree/add}">Add Tree</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="table-responsive">
-                                        <table class="table all-package theme-table table-product" id="table_id">
-                                            <thead>
-                                            <tr>
-                                                <th>Ảnh</th>
-                                                <th>Tên cây</th>
-                                                <th>Category</th>
-                                                <th>Màu</th>
-                                                <th>Mùa đẹp nhất</th>
-                                                <th>Giá</th>
-                                                <th>Giá chưa sale</th>
-                                                <th>Số lượng</th>
-                                                <th>Size</th>
-                                                <th>Ngày nhập cây</th>
-                                                <th>Option</th>
-                                            </tr>
-                                            </thead>
 
-                                            <tbody>
-                                            <tr th:each="tree : ${trees}" th:id="${tree.getId()}">
-                                                <td>
-                                                    <div class="table-image">
-                                                        <img th:src="${tree.getImage()}" class="img-fluid"
-                                                             alt="">
-                                                    </div>
-                                                </td>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-header-2">
+                        <h5>Category Information</h5>
+                    </div>
 
-                                                <td th:text="${tree.getName()}"></td>
-
-                                                <td th:text="${tree.getCategory_tree().getName()}"></td>
-
-                                                <td th:text="${tree.getFlowerColor()}"></td>
-
-                                                <td class="td-price" th:text="${tree.getMostSeason()}"></td>
-
-                                                <td th:text="${tree.getPrice()}"></td>
-
-                                                <td class="td-price" th:text="${tree.getPriceOther()}"></td>
-
-                                                <td th:text="${tree.getQuantity()}"></td>
-
-                                                <td th:text="${tree.getSize()}"></td>
-
-                                                <td th:text="${tree.getArrivalDate()}"></td>
-
-                                                <td>
-                                                    <ul>
-                                                        <li>
-                                                            <a href="order-detail.html">
-                                                                <i class="ri-eye-line"></i>
-                                                            </a>
-                                                        </li>
-
-                                                        <li>
-                                                            <a th:href="@{'/tree/update/' + ${tree.getId()}}">
-                                                                <i class="ri-pencil-line"></i>
-                                                            </a>
-                                                        </li>
-
-                                                        <li>
-                                                            <a href="javascript:void(0)" data-bs-toggle="modal"
-                                                               th:onclick="'deleteProduct('+ ${tree.id}+')'">
-                                                                <i class="ri-delete-bin-line"></i>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
+                    <form class="theme-form theme-form-2 mega-form" th:action="@{/category/product/add}" method="post" th:object="${categoryTree}">
+                        <div class="mb-4 row align-items-center">
+                            <label class="form-label-title col-sm-3 mb-0">Category Name</label>
+                            <div class="col-sm-9">
+                                <input class="form-control" type="text" th:field="*{name}"
+                                       placeholder="Category Name">
                             </div>
                         </div>
-                    </div>
+                        <button type="submit" class="btn btn-success">Thêm</button>
+                    </form>
                 </div>
             </div>
-        </div>
-            <!-- Container-fluid Ends-->
 
+            <!-- footer Start -->
+            <div class="container-fluid">
+                <footer class="footer">
+                    <div class="row">
+                        <div class="col-md-12 footer-copyright text-center">
+                            <p class="mb-0">Copyright 2022 © Fastkart theme by pixelstrap</p>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+            <!-- footer En -->
+        </div>
+        <!-- Container-fluid End -->
     </div>
     <!-- Page Body End -->
 </div>
-<!-- page-wrapper End-->
+<!-- page-wrapper End -->
 
 <!-- Modal Start -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -546,6 +479,7 @@
                 <h5 class="modal-title" id="staticBackdropLabel">Logging Out</h5>
                 <p>Are you sure you want to log out?</p>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
                 <div class="button-box">
                     <button type="button" class="btn btn--no" data-bs-dismiss="modal">No</button>
                     <button type="button" class="btn  btn--yes btn-primary">Yes</button>
@@ -570,40 +504,38 @@
 <script th:src="@{/back-end-js/scrollbar/simplebar.js}"></script>
 <script th:src="@{/back-end-js/scrollbar/custom.js}"></script>
 
-<!-- Sidebar jquery -->
+<!-- Sidebar js -->
 <script th:src="@{/back-end-js/config.js}"></script>
 
-<!-- tooltip init js -->
-<script th:src="@{/back-end-js/tooltip-init.js}"></script>
-
-<!-- Plugins JS -->
+<!-- bootstrap tag-input js -->
+<script th:src="@{/back-end-js/bootstrap-tagsinput.min.js}"></script>
 <script th:src="@{/back-end-js/sidebar-menu.js}"></script>
-<script th:src="@{/back-end-js/notify/bootstrap-notify.min.js}"></script>
-<script th:src="@{/back-end-js/notify/index.js}"></script>
-
-<!-- Apexchar js -->
-<script th:src="@{/back-end-js/chart/apex-chart/apex-chart1.js}"></script>
-<script th:src="@{/back-end-js/chart/apex-chart/moment.min.js}"></script>
-<script th:src="@{/back-end-js/chart/apex-chart/apex-chart.js}"></script>
-<script th:src="@{/back-end-js/chart/apex-chart/stock-prices.js}"></script>
-<script th:src="@{/back-end-js/chart/apex-chart/chart-custom1.js}"></script>
-
-
-<!-- slick slider js -->
-<script th:src="@{/back-end-js/slick.min.js}"></script>
-<script th:src="@{/back-end-js/custom-slick.js}"></script>
 
 <!-- customizer js -->
 <script th:src="@{/back-end-js/customizer.js}"></script>
 
-<!-- ratio js -->
-<script th:src="@{/back-end-js/ratio.js}"></script>
+<!--Dropzon js -->
+<script th:src="@{/back-end-js/dropzone/dropzone.js}"></script>
+<script th:src="@{/back-end-js/dropzone/dropzone-script.js}"></script>
+
+<!-- Plugins js -->
+<script th:src="@{/back-end-js/notify/bootstrap-notify.min.js}"></script>
+<script th:src="@{/back-end-js/notify/index.js}"></script>
+
+<!-- ck editor js -->
+<script th:src="@{/back-end-js/ckeditor.js}"></script>
+<script th:src="@{/back-end-js/ckeditor-custom.js}"></script>
+
+<!-- select2 js -->
+<script th:src="@{/back-end-js/select2.min.js}"></script>
+<script th:src="@{/back-end-js/select2-custom.js}"></script>
 
 <!-- sidebar effect -->
 <script th:src="@{/back-end-js/sidebareffect.js}"></script>
 
 <!-- Theme js -->
 <script th:src="@{/back-end-js/script.js}"></script>
+
 </body>
 
 </html>
