--- a/web_ban_cong/src/main/resources/templates/front-end/index-6.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/index-6.html
@@ -232,7 +232,7 @@
                                                                 Category Slider</a>
                                                         </li>
                                                         <li>
-                                                            <a class="dropdown-item" href="shop-category.html">Shop
+                                                            <a class="dropdown-item" href="shop-category-tree.html">Shop
                                                                 Category Sidebar</a>
                                                         </li>
                                                         <li>
@@ -283,7 +283,7 @@
                                                                 </li>
 
                                                                 <li>
-                                                                    <a href="product-bottom-thumbnail.html">Bottom
+                                                                    <a href="product-detail.html">Bottom
                                                                         Thumbnail</a>
                                                                 </li>
                                                             </ul>
