--- a/web_ban_cong/src/main/resources/templates/front-end/index-7.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/index-7.html
@@ -139,7 +139,7 @@
                                                                     Category Slider</a>
                                                             </li>
                                                             <li>
-                                                                <a class="dropdown-item" href="shop-category.html">Shop
+                                                                <a class="dropdown-item" href="shop-category-tree.html">Shop
                                                                     Category Sidebar</a>
                                                             </li>
                                                             <li>
@@ -194,7 +194,7 @@
                                                                     </li>
 
                                                                     <li>
-                                                                        <a href="product-bottom-thumbnail.html">Bottom
+                                                                        <a href="product-detail.html">Bottom
                                                                             Thumbnail</a>
                                                                     </li>
                                                                 </ul>
