--- a/web_ban_cong/src/main/resources/templates/front-end/seller-detail-2.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/seller-detail-2.html
@@ -795,7 +795,7 @@
                                                             Category Slider</a>
                                                     </li>
                                                     <li>
-                                                        <a class="dropdown-item" href="shop-category.html">Shop
+                                                        <a class="dropdown-item" href="shop-category-tree.html">Shop
                                                             Category Sidebar</a>
                                                     </li>
                                                     <li>
@@ -842,7 +842,7 @@
                                                             </li>
 
                                                             <li>
-                                                                <a href="product-bottom-thumbnail.html">Bottom
+                                                                <a href="product-detail.html">Bottom
                                                                     Thumbnail</a>
                                                             </li>
                                                         </ul>
