--- a/web_ban_cong/src/main/resources/templates/front-end/index.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/index.html
@@ -99,7 +99,7 @@
                                 </span>
                         </button>
                         <a th:href="@{/}" class="web-logo nav-logo">
-                            <img th:src="@{../images/logo/1.png}" class="img-fluid blur-up lazyload" alt="">
+                            <img th:src="@{../images/logo/1.jpg}" class="img-fluid blur-up lazyload" alt="">
                         </a>
 
                         <div class="middle-box">
