--- a/web_ban_cong/src/main/resources/templates/front-end/login.html
+++ b/web_ban_cong/src/main/resources/templates/front-end/login.html
@@ -1166,17 +1166,17 @@
                     </div>
 
                     <div class="input-box">
-                        <form class="row g-4">
+                        <form class="row g-4" action="/login" method="post" enctype="multipart/form-data">
                             <div class="col-12">
                                 <div class="form-floating theme-form-floating log-in-form">
-                                    <input type="email" class="form-control" id="email" placeholder="Email Address">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Email Address">
                                     <label for="email">Email Address</label>
                                 </div>
                             </div>
 
                             <div class="col-12">
                                 <div class="form-floating theme-form-floating log-in-form">
-                                    <input type="password" class="form-control" id="password"
+                                    <input type="password" class="form-control" id="password" name="password"
                                            placeholder="Password">
                                     <label for="password">Password</label>
                                 </div>
